# KPADev

KPA/: CMakeLists.txt  OpenECE0206byIndex.cpp  QThread.h  arinc429.cpp  arinc429.h  buttonhandlers.cpp  buttonhandlers.h  data_receiver.cpp  data_receiver.h  intrfECE0206.h  ioctlECE0206.h  library02061.cpp  library02061.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave  tvk02061.h
KPA/GUI/: Controlinfo.docx  Controlinfo.txt
